# Video_application

LAN_Collaboration_App/: AUDIO_TESTING_GUIDE.md  CHANGES.txt  CHAT_BROADCASTING_FIXED.txt  CHAT_FIX.md  CHAT_TESTING_GUIDE.md  CODE_REVIEW_AND_FIXES.md  FILE_TRANSFER_EXAMPLE.md  FIXES_SUMMARY.md  GUI_GUIDE.md  PROJECT_VALIDATION.md  QUICK_FIX.md  README.md  SCREEN_SHARE_TESTING_GUIDE.md  TESTING_STEP_BY_STEP.md  VIDEO_RECEIVE_PATCH.py  VIDEO_TESTING_GUIDE.md  apply_video_patch.py  requirements.txt  run_client.bat  run_server.bat  simple_chat_server.py  test_audio_streaming.py  test_dummy_servers.py  test_video_streaming.py
LAN_Collaboration_App/client/: client_audio.py  client_chat.py  client_file_transfer.py  client_gui.py  client_gui_backup.py  client_gui_old.py  client_screen_share.py  client_video.py
LAN_Collaboration_App/client/utils/: audio_tools.py  compression.py  file_utils.py  network_utils.py  (+1 more)
LAN_Collaboration_App/docs/: setup_guide.md
LAN_Collaboration_App/server/: __init__.py  audio_server.py  chat_server.py  file_server.py  screen_share_server.py  server_main.py  video_server.py
LAN_Collaboration_App/shared/: constants.py  helpers.py  protocol.py
lan-collab/: README.md  WARP.md  pyproject.toml  requirements.txt  setup.cfg
lan-collab/docs/: architecture.md
lan-collab/src/: __main__.py  app.py  config.py
lan-collab/src/client/: __init__.py  client.py  ui.py
lan-collab/src/core/: discovery.py  sync.py  utils.py
lan-collab/src/server/: handlers.py  protocols.py  server.py
lan-collab/tests/: conftest.py  test_discovery.py  test_sync.py
