[metadata]
name = lan-collab
version = 0.1.0
description = A LAN Collaboration App for real-time communication and data sharing.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/lan-collab
license = MIT

[options]
packages = find:
install_requires =
    PyAudio
    OpenCV-Python
    PyQt5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lan-collab = __main__:main